opam-version: "2.0"
synopsis: "Solver for a wooden cube puzzle"
description: "Solver for a wooden cube puzzle"
maintainer: "Mathieu Barbin"
authors: "Mathieu Barbin"
license: "MIT"
homepage: "https://github.com/mbarbin/cubzzle"
doc: "https://github.com/mbarbin/cubzzle"
bug-reports: "https://github.com/mbarbin/cubzzle/issues"
depends: [
  "ocaml" {>= "4.13.1"}
  "dune" {>= "2.0.0"}
  "graphics" {> "5.1.2"}
  "base" {>= "v0.15"}
  "core" {>= "v0.15"}
  "ppx_jane" {>= "v0.15"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mbarbin/cubzzle.git"
