(library
 (name cubzzle_test)
 (flags
  -w
  +a-4-40-41-42-44-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdio
  -open
  Cubzzle)
 (libraries
  base
  cubzzle
  graphics
  expect_test_helpers_core.expect_test_helpers_base
  stdio)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))
