(library
 (name cubzzle_test)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdio
  -open
  Expect_test_helpers_base
  -open
  Cubzzle)
 (libraries
  base
  cubzzle
  expect_test_helpers_core.expect_test_helpers_base
  graphics
  stdio)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))
