(library
 (name cubzzle_expect_test)
 (package cubzzle-tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Cubzzle_stdlib
  -open
  Cubzzle)
 (libraries cubzzle cubzzle_stdlib graphics)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))
