(library
 (name cubzzle_stdlib_test)
 (public_name cubzzle-tests.cubzzle_stdlib_test)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Cubzzle_stdlib)
 (libraries cubzzle_stdlib)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))
